      + All operations using sudo now check the value of $chroot_mode, and
        use sudo or schroot accordingly.
      + When using schroot, %main::dist_order is filled using the schroot
        chroot priorities.
      + Added %main::dist_locations to store the location of the
        available chroots.
    - Print a readable error if a chroot does not exist.

 -- Roger Leigh <rleigh@debian.org>  Sat, 10 Sep 2005 23:34:44 +0100

sbuild (0.35) unstable; urgency=low

  Michael Banck:

  * bin/abort-current-build: Remove the `-B' from the grep line as
    `sbuild -s' does not pass that option to dpkg-configure and abort-
    current-build fails in that case.
  * sbuild: Set the locale to `POSIX' to make debconf and debhelper calls in
    the chroot not spew out locale warnings all the time.
    (closes: #287672)
  * sbuild: Removed check for specific distributions. Instead, fail if
    build/chroot-$dist is not there.
  * sbuild: Only override Distribution in .changes if specified as option on
    the command-line.
    (closes: #300145)
  * sbuild: Specify full path for Dir::Etc::main and Dir::Etc::parts.
  * example.sbuildrc: Clarify that $maintainer_name is not mandatory and
    overrides Maintainer: field, whereas $uploader_name overrides
    the Changed-By: field in changes.
  * Applied patch by Santiago Vila:
    - Moves scripts from /usr/lib/sbuild to /usr/share/sbuild and modifies
      all callers accordingly.
    - Add -n option to tail to comply with POSIX.
    - Call /usr/sbin/sendmail instead of /usr/lib/sendmail.
    (closes: #292717)
  * sbuild: Tolerate '0' as version number, thanks Santiago Vila.
    (closes: #300205)

 -- Michael Banck <mbanck@debian.org>  Fri,  1 Apr 2005 21:23:30 +0200

sbuild (0.34) unstable; urgency=high

  Francesco Paolo Lovergine:

  * Removed searchscripts recommendation in debian/control. That was requested
    by ppack now removed in archive.
    (closes: #272318)
  * checkchroot now uses grep-dctrl, thanks Clint Adams.