@@ -1,2 +1,0 @@
-/etc/sbuild.conf
-/etc/sbuild.conf.local
