@@ -28,8 +28,8 @@ You should have received a copy of the GNU General
 Public License with your Debian GNU/Linux system, in
 /usr/share/common-licenses/GPL, or with the Debian GNU/Linux
 wanna-build source package as the file COPYING.  If not, write to
-the Free Software Foundation, Inc., 59 Temple Place, Suite 330,
-Boston, MA 02111-1307, USA.
+thea Free Software Foundation, Inc., 51 Franklin St, Fifth Floor,
+Boston, MA 02110-1301, USA.
 
 Authors:
 Roman Hodek - wanna-build (and sbuild)
