@@ -7,19 +7,16 @@ INSTALL=/usr/bin/install
 DESTDIR=$(CURDIR)/debian/sbuild
 
 # This is the debhelper compatability version to use.
-export DH_COMPAT=2
+export DH_COMPAT=4
 
 configure: configure-stamp
 configure-stamp:
 	dh_testdir
-	# Add here commands to configure the package.
 	touch configure-stamp
 
 build: configure-stamp build-stamp
 build-stamp:
 	dh_testdir
-
-	# Add here commands to compile the package.
 	touch build-stamp
 
 clean:
@@ -27,7 +24,6 @@ clean:
 	dh_testroot
 	rm -f build-stamp configure-stamp
 
-	# Add here commands to clean up after the build process.
 	-$(MAKE) clean
 
 	dh_clean
@@ -38,15 +34,14 @@ install: build
 	dh_clean -k
 	dh_installdirs
 
-	# Add here commands to install the package into debian/sbuild.
 	$(INSTALL) -m 755 sbuild update-sourcedeps avg-pkg-build-time \
 		$(DESTDIR)/usr/bin/
-	ln -s /usr/bin/avg-pkg-build-time $(DESTDIR)/usr/bin/avg-pkg-build-space
+	ln -s avg-pkg-build-time $(DESTDIR)/usr/bin/avg-pkg-build-space
 	$(INSTALL) -m 644 sbuild.conf sbuild.conf.local $(DESTDIR)/etc/
 
 	cp -a configs example.sbuildrc $(DESTDIR)/usr/share/doc/sbuild/examples/.
-	find bin -type f -maxdepth 1 -exec cp {} $(DESTDIR)/usr/share/sbuild/ \;
-	find chroot -type f -maxdepth 1 -exec cp {} $(DESTDIR)/usr/share/sbuild/ \;
+	find bin -maxdepth 1 -type f -exec cp {} $(DESTDIR)/usr/share/sbuild/ \;
+	find chroot -maxdepth 1 -type f -exec cp {} $(DESTDIR)/usr/share/sbuild/ \;
 	mv $(DESTDIR)/usr/share/sbuild/README-buildd.chroot \
 		$(DESTDIR)/usr/share/doc/sbuild/
 
@@ -56,6 +51,7 @@ binary-indep: build install
 	dh_testroot
 	dh_installdocs debian/cvslogs.old
 	dh_installman
+	ln -s avg-pkg-build-time.1.gz debian/sbuild/usr/share/man/man1/avg-pkg-build-space.1.gz
 	dh_installchangelogs 
 	dh_compress -Xbuildd.chroot -XREADME-buildd.chroot -XREADME-buildd.chroot.pre-sarge -Xbuildd.chroot.pre-sarge
 	dh_fixperms
